--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,83 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    --background: #09090c;
+    --foreground: #ffffff;
+    --subtext: #bababa;
+    --primary: #b4fd64;
+    --primary-hover: #93e33b;
+    --primary-gradient: linear-gradient(
+        90deg,
+        rgba(242, 244, 82, 1) 0%,
+        rgba(180, 253, 100, 1) 64%
+    );
+    --primary-gradient-hover: linear-gradient(
+        90deg,
+        rgba(216, 218, 42, 1) 0%,
+        rgba(147, 227, 59, 1) 64%
+    );
+    --secondary: #222224;
+    --secondary-hover: #4e4e52;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    color: var(--foreground);
+    background: var(--background);
+    font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-weight: 400;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+button {
+    cursor: pointer;
+    padding: 12px 16px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: var(--foreground);
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    border-radius: 12px;
+    border: none;
+    background: var(--secondary);
+    transition: all 0.3s;
+}
+
+button:hover {
+    background-color: var(--secondary-hover);
+}
+
+button.primary {
+    color: var(--background);
+    background: var(--primary);
+    background: var(--primary-gradient);
+    font-weight: 700;
+}
+
+button.primary:hover {
+    background: var(--primary-hover);
+    background: var(--primary-gradient-hover);
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.container {
+    margin: 0 auto;
+    max-width: 1792px;
+    width: 100%;
 }
