--- a/src/components/base/New/New.module.scss
+++ b/src/components/base/New/New.module.scss
@@ -1,3 +1,7 @@
+.container {
+    position: relative;
+}
+
 .title {
     margin-top: 55px;
     font-size: 24px;
@@ -5,17 +9,33 @@
 }
 
 .list {
-    margin-top: 12px;
+    margin: 0;
     list-style: none;
     display: flex;
     gap: 20px;
+
+    // position: absolute;
+    // display: block;
+    // top: 57px;
+    // left: 0;
+    // width: 487px;
+    // height: 95vw;
+    // overflow-y: auto;
+    // overflow-x: hidden;
+    // transform: rotate(-90deg) translateY(-487px);
+    // transform-origin: right top;
+    // &::-webkit-scrollbar {
+    //     display: none;
+    // }
 }
 
 .item {
-    transition: transform 0.3s;
-    &:hover {
-        transform: scale(1.03);
-    }
+    display: block;
+    // width: 280px;
+    // height: 487px;
+
+    // border-radius: 20px;
+    // transform: rotate(90deg);
 }
 
 .wrapper {
