Создан баннер страницы Сериал

--- a/src/components/base/Trailer/Trailer.module.scss
+++ b/src/components/base/Trailer/Trailer.module.scss
@@ -1,28 +1,5 @@
-.info {
+.section {
     margin-top: 337px;
-}
-
-.list {
-    margin-top: 16px;
-    display: flex;
-    list-style: none;
-    align-items: center;
-    gap: 8px;
-    font-weight: 300;
-    font-size: 20px;
-}
-
-.rating {
-    padding: 5px 8px;
-    background: rgba(#fff, 0.1);
-    border-radius: 8px;
-}
-
-.dot {
-    width: 4px;
-    height: 4px;
-    background: rgba(#fff, 0.3);
-    border-radius: 4px;
 }
 
 .wrapper {
@@ -44,9 +21,6 @@
     width: 256px;
     border-radius: 16px;
     transition: transform 0.3s;
-    &:hover {
-        transform: scale(1.03);
-    }
     &:hover::before {
         cursor: pointer;
         opacity: 0.3;
@@ -80,5 +54,13 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: -2;
+}
+
+.black {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
     z-index: -1;
 }
