--- a/src/components/base/Trailer/Trailer.module.scss
+++ b/src/components/base/Trailer/Trailer.module.scss
@@ -14,40 +14,9 @@
     display: flex;
     list-style: none;
     gap: 16px;
-}
-
-.item {
-    position: relative;
-    width: 256px;
-    border-radius: 16px;
-    transition: transform 0.3s;
-    &:hover::before {
-        cursor: pointer;
-        opacity: 0.3;
-    }
-    &::before {
-        z-index: 0;
-        content: '';
-        opacity: 0.5;
-        position: absolute;
-        width: 100%;
-        height: 144px;
-        background: var(--background);
-        border-radius: 16px;
-        transition: opacity 0.3s;
-    }
-    &:first-child::before {
+    li:first-child::before {
         opacity: 0.2;
     }
-}
-
-.line {
-    width: 100%;
-    height: 4px;
-    background: var(--primary);
-    background: var(--primary-gradient);
-    border-radius: 100px;
-    z-index: 100;
 }
 
 .banner {
@@ -61,6 +30,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 744px;
     z-index: -1;
 }
