--- a/src/components/base/Banner/Banner.module.scss
+++ b/src/components/base/Banner/Banner.module.scss
@@ -34,12 +34,15 @@
     position: absolute;
     top: 76px;
     left: 0;
+    width: 100%;
+    height: 594px;
     z-index: -1;
 }
 
 .banner {
     position: absolute;
     width: 100%;
+    height: 594px;
     top: 76px;
     left: 0;
     object-fit: cover;
