--- a/src/components/base/Trailer/Trailer.module.scss
+++ b/src/components/base/Trailer/Trailer.module.scss
@@ -11,11 +11,25 @@
 
 .trailers {
     margin-top: 24px;
+    padding-bottom: 4px;
     display: flex;
     list-style: none;
+    overflow-x: scroll;
     gap: 16px;
     li:first-child::before {
         opacity: 0.2;
+    }
+    &::-webkit-scrollbar {
+        cursor: pointer;
+        height: 4px;
+    }
+    &::-webkit-scrollbar-track {
+        background: transparent;
+        border-radius: 3px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background: rgba(#fff, 0.2);
+        border-radius: 3px;
     }
 }
 
@@ -23,6 +37,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 744px;
     z-index: -2;
 }
 
@@ -30,6 +46,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
     height: 744px;
     z-index: -1;
 }
