--- a/src/components/ui/NameImg/NameImg.module.scss
+++ b/src/components/ui/NameImg/NameImg.module.scss
@@ -1,3 +1,17 @@
 .img {
+    position: relative;
     height: auto;
+    width: 338px;
+}
+
+@media (max-width: 1280px) {
+    .img {
+        width: 250px;
+    }
+}
+
+@media (max-width: 425px) {
+    .img {
+        width: 176px;
+    }
 }
