--- a/src/components/base/Banner/Banner.module.scss
+++ b/src/components/base/Banner/Banner.module.scss
@@ -33,18 +33,62 @@
 .black {
     position: absolute;
     top: 76px;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 1920px;
     width: 100%;
-    height: 594px;
+    height: 595px;
     z-index: -1;
 }
 
 .banner {
     position: absolute;
+    max-width: 1920px;
     width: 100%;
     height: 594px;
     top: 76px;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     object-fit: cover;
     z-index: -2;
 }
+
+// @media (max-width: 1820px) {
+//     .section {
+//         margin-top: 300px;
+//     }
+//     .banner,
+//     .black {
+//         height: 700px;
+//     }
+// }
+
+// @media (max-width: 1280px) {
+//     .section {
+//         margin-top: 250px;
+//     }
+//     .banner,
+//     .black {
+//         height: 600px;
+//     }
+// }
+
+// @media (max-width: 768px) {
+//     .trailers {
+//         overflow-y: hidden;
+//     }
+//     .banner,
+//     .black {
+//         height: 400px;
+//     }
+// }
+
+// @media (max-width: 425px) {
+//     .section {
+//         margin-top: 203px;
+//     }
+//     .banner,
+//     .black {
+//         height: 300px;
+//     }
+// }
