--- a/src/components/base/New/New.module.scss
+++ b/src/components/base/New/New.module.scss
@@ -9,7 +9,7 @@
 }
 
 .list {
-    margin: 0;
+    margin-top: 20px;
     padding-bottom: 4px;
     list-style: none;
     display: flex;
@@ -94,4 +94,42 @@
     font-size: 18px;
     font-weight: 300;
     color: var(--subtext);
+}
+
+@media (max-width: 1024px) {
+    .title {
+        font-size: 20px;
+    }
+    .wrapper {
+        width: 200px;
+        height: 300px;
+    }
+    .img {
+        width: 200px;
+        height: 300px;
+    }
+    .subtitle,
+    .info {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 768px) {
+    .title {
+        margin-top: 60px;
+    }
+    .wrapper {
+        width: 168px;
+        height: 252px;
+    }
+    .img {
+        width: 168px;
+        height: 252px;
+    }
+}
+
+@media (max-width: 425px) {
+    .title {
+        margin-top: 32px;
+    }
 }
