--- a/src/components/base/Trailer/Trailer.module.scss
+++ b/src/components/base/Trailer/Trailer.module.scss
@@ -36,7 +36,11 @@
 .banner {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 1920px;
+    object-fit: cover;
     width: 100%;
     height: 744px;
     z-index: -2;
@@ -45,8 +49,50 @@
 .black {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 1920px;
     width: 100%;
     height: 744px;
     z-index: -1;
+}
+
+@media (max-width: 1820px) {
+    .section {
+        margin-top: 300px;
+    }
+    .banner,
+    .black {
+        height: 700px;
+    }
+}
+
+@media (max-width: 1280px) {
+    .section {
+        margin-top: 250px;
+    }
+    .banner,
+    .black {
+        height: 600px;
+    }
+}
+
+@media (max-width: 768px) {
+    .trailers {
+        overflow-y: hidden;
+    }
+    .banner,
+    .black {
+        height: 400px;
+    }
+}
+
+@media (max-width: 425px) {
+    .section {
+        margin-top: 203px;
+    }
+    .banner,
+    .black {
+        height: 300px;
+    }
 }
