--- a/src/components/ui/Advantages/Advantages.module.scss
+++ b/src/components/ui/Advantages/Advantages.module.scss
@@ -15,3 +15,34 @@
     align-items: center;
     gap: 12px;
 }
+
+@media (max-width: 1280px) {
+    .list {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 768px) {
+    .list {
+        font-size: 20px;
+    }
+    .item {
+        img {
+            width: 28px;
+            height: 28px;
+        }
+    }
+}
+
+@media (max-width: 425px) {
+    .list {
+        margin-top: 24px;
+        font-size: 16px;
+    }
+    .item {
+        img {
+            width: 20px;
+            height: 20px;
+        }
+    }
+}
