--- a/src/components/ui/ShortInfo/ShortInfo.module.scss
+++ b/src/components/ui/ShortInfo/ShortInfo.module.scss
@@ -30,3 +30,16 @@
     background: rgba(#fff, 0.3);
     border-radius: 4px;
 }
+
+@media (max-width: 1280px) {
+    .list {
+        width: 100%;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 425px) {
+    .list {
+        width: 230px;
+    }
+}
