--- a/src/components/ui/TrailerItem/TrailerItem.module.scss
+++ b/src/components/ui/TrailerItem/TrailerItem.module.scss
@@ -3,7 +3,7 @@
 }
 
 .link {
-    height: 100%;
+    display: block;
     transition: transform 0.3s;
     &:hover::before {
         cursor: pointer;
@@ -14,7 +14,7 @@
         opacity: 0.5;
         position: absolute;
         width: 100%;
-        height: 100%;
+        height: 144px;
         background: var(--background);
         border-radius: 16px;
         z-index: 1;
@@ -24,6 +24,8 @@
 
 .img {
     border-radius: 16px;
+    width: 256px;
+    height: 144px;
 }
 
 .time {
@@ -50,4 +52,28 @@
 .title {
     margin-top: 8px;
     font-size: 20px;
+}
+
+@media (max-width: 768px) {
+    .img {
+        width: 180px;
+        height: auto;
+    }
+    .link {
+        &::before {
+            height: 101px;
+        }
+    }
+}
+
+@media (max-width: 425px) {
+    .img {
+        width: 107px;
+        height: 61px;
+    }
+    .link {
+        &::before {
+            height: 61px;
+        }
+    }
 }
